# wingpanel-indicator-notifications

./: .travis.yml  CMakeLists.txt  README.md  config.vala.cmake  meson.build
.github/workflows/: ci.yml  main.yml  release.yml
data/: AppEntry.css  AppEntryClear.css  AppEntryExpander.css  CMakeLists.txt  NotificationEntry.css  gresource.xml  indicator.css  io.elementary.wingpanel.notifications.gresource.xml  io.elementary.wingpanel.notifications.gschema.xml  meson.build  notifications.appdata.xml.in  notifications.gschema.xml  notifications.metainfo.xml.in  org.pantheon.desktop.wingpanel.indicators.notifications.gschema.xml
debian/: changelog  control  copyright  rules
po/: CMakeLists.txt  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+167 more)
po/extra/: LINGUAS  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+165 more)
src/: CMakeLists.txt  Config.vala.in  Indicator.vala  Notification.vala  NotificationEntry.vala  NotificationsList.vala  NotificationsMonitor.vala  Utils.vala
src/Services/: Button.vala  Interfaces.vala  NSettings.vala  Notification.vala  NotificationManager.vala  NotificationModel.vala  NotificationProvider.vala  NotificationsMonitor.vala  NotifySettings.vala  Session.vala  Settings.vala  Utils.vala  dbus-glib-1.vapi
src/Widgets/: AppEntry.vala  AppHeader.vala  AppSection.vala  NotDisturbMode.vala  NotificationEntry.vala  NotificationsList.vala  SeparatorEntry.vala
